[tool.poetry]
name = "tfg"
version = "0.1.0"
description = "TFG"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
pandas = "^1.4.2"
tweepy = "^4.8.0"
twarc = "^2.10.2"
torch = "^1.11.0"
transformers = "^4.18.0"
emoji = ">=1.6.1"
pysentimiento = "^0.3.2"
plotly = "^5.8.0"
streamlit = "^1.10.0"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
